Completed Phase 1 - Submission 2 - removed 'List.of' method (for sure this time)